# ball-collecting-robots

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
data/: step_response.csv
docs/: architecture.md  future_work.md
firmware/prototype1/: servo_guidance_pi.ino
firmware/prototype2/: motor_speed_pi.ino
modeling/: kinematics_sim.py  motor_identification.py
tools/: export_gains.py  log_parser.py
