[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ball-collecting-robots"
version = "1.0.0"
description = "Autonomous table tennis ball collecting robot - modeling, tools, and analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Marc Duboc"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering",
]
keywords = ["robotics", "control-systems", "differential-drive", "pi-controller"]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pytest>=7.0",
]
all = [
    "ball-collecting-robots[plot,dev]",
]

[project.scripts]
kinematics-sim = "modeling.kinematics_sim:main"
motor-id = "modeling.motor_identification:main"
log-parser = "tools.log_parser:main"
export-gains = "tools.export_gains:main"

[project.urls]
Homepage = "https://promaaa.github.io/portfolio/ball-collecting-writeup.html"
Repository = "https://github.com/promaaa/ball-collecting-robots"

[tool.setuptools.packages.find]
include = ["modeling*", "tools*"]

# Ruff linting configuration
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["modeling", "tools"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "numpy.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
